syntax = "proto3";


package fort.myrmidon.pb;

import "Vector2d.proto";

message SnapshotCacheHeader {
	uint32 Threshold  = 1;
	string FamilyName = 2;
};

message Snapshot {
	Vector2d TagPosition = 1;
	double  TagAngle    = 2;
	uint32  TagValue    = 3;

	repeated Vector2d Corners = 4;

	uint64 Frame             = 5;
	string RelativeImagePath = 6;
};